# aegis

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum
cmd/preview-emails/: main.go
cmd/server/: main.go
internal/config/: config.go
internal/crypto/: envelope.go  hash.go  jwt.go  kek.go  password.go
internal/domain/: apikey.go  audit.go  project.go  secret.go  tenant.go  user.go
internal/email/: preview.html  renderer.go
internal/email/templates/: base.html  verification.html  welcome.html
internal/handler/: apikey.go  audit.go  auth.go  health.go  project.go  secret.go  tenant.go
internal/middleware/: audit.go  auth.go  cors.go  jwt.go  ratelimit.go  tenant.go
internal/pkg/apierror/: errors.go
internal/pkg/envparse/: envparse.go
internal/pkg/pagination/: pagination.go
internal/pkg/validator/: validator.go
internal/repository/: pg_apikey.go  pg_audit.go  pg_project.go  pg_secret.go  pg_tenant.go  pg_user.go
internal/server/: router.go  server.go
internal/service/: apikey.go  audit.go  email.go  project.go  secret.go  tenant.go  user.go
migrations/: 000001_create_tenants.up.sql  000002_create_projects.up.sql  000003_create_secrets.up.sql  000004_create_api_keys.up.sql  000005_create_audit_logs.up.sql  000006_create_users.up.sql  000007_add_verification_attempts.down.sql  000007_add_verification_attempts.up.sql
sdk/go/: README.md  go.mod
sdk/node/: README.md  package.json
sdk/node/src/: index.ts  (+3 more)
sdk/python/: README.md  pyproject.toml
sdk/python/aegis_sdk/: __init__.py  client.py  types.py
