[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-sdk"
version = "0.1.0"
description = "Python SDK for the Aegis secrets management API."
requires-python = ">=3.9"
readme = "README.md"
authors = [{ name = "Aegis" }]
license = { text = "MIT" }
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["aegis_sdk*"]
